# LLM-WhatsApp-Analysis

./: .env-example  .gitignore  .here  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  LICENSE  README.md  SConstruct  _quarto.yml  config.do.template  config.yaml  profile.do  pyproject.toml  setup.do
.config/quarto/: README.md  additional-quarto-rules.js  custom-quarto-rules.js  quarto-image-rules.js
.config/stata/: install_packages.do  stata_requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: code-review.md  data-analysis-task.md  data-cleaning-task.md
.github/workflows/: pre-commit.yml
data/raw/: DatosEjemplos-FalsePII.dta  DatosEjemplos-FalsePII.xlsx  full_base_WA_clean_NOPII.dta  sample_data.csv  sample_data_no_duplicates.csv
do_files/: 02b_data_combination.do  03_descriptive_analysis.do  04_main_analysis.do  05_robustness_checks.do  06_generate_figures.do  functions.do
do_files/Ejemplos/: 00_run.do  01_data_cleaning.do  02_data_preparation.do  02a_data_transformation.do  07_advanced_programming.do
do_files/demo/: README.md  nbstata-demo.do  nbstata-demo.ipynb
documentation/: A+P_Informe cierre de año 2025.docx  PROYECTO.md  llm-whatsapp-pipeline.md  s41598-025-13560-9.md
documentation/Papers/: dedios-sanguineti-et-al-2025.md
documentation/Process/: Explicacion-ScriptLimpieza.md  aplicacion-dedios-apapachar.md  getting-started.md  llm-whatsapp-pipeline.md  modificacion_config.md
documentation/Programa/: aplicacion-dedios-apapachar.md
reports/: american-economic-review.csl  analysis_report.qmd  convert_figures.py  cover_page.docx  custom-reference.docx  merge_cover_page.py  references.bib
scripts/do_files/: 01_remove_pii.do
scripts/python_scripts/: 01_quality_analysis.py  02_preprocessing.py  03_chunking.py  04_embeddings.py  05a_clustering.py  05b_semantic_search.py  06_similarity_map.py  06_summarization.py  06b_similarity_map_participantes.py  07_similarity_map.py  07b_similarity_map_participantes.py  08_citation_finder.py  08b_citation_finder_participantes.py  09_analisis_citas_participantes.py  09a_citas_presentacion.py  10a_cadenas_interaccion.py  10a_panel1_presentacion.py  10b_piloto_codificacion.py  10c_codificacion.py  (+13 more)
src/: README.md
tutorials/: seaborn-tutorial.py  webscraping-tutorial.py
(+25 files in other folders)
